adjust footer position. fix gap between testimonials and project filter tags @large screens

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 footer {
   position: absolute;
-  bottom: 2rem;
+  bottom: 3rem;
   width: 100%;
   height: 16rem;
   height: 21rem;
@@ -14,7 +14,7 @@ footer {
 }
 @media screen and (min-width: 760px) {
   footer {
-    bottom: 4.5rem;
+    bottom: 6rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -1177,6 +1177,11 @@ body {
 .testimonials .carousel-container.animate__animated.animate__bounceInUp {
   --animate-duration: 1.8s;
 }
+@media screen and (min-width: 760px) {
+  .testimonials {
+    padding-bottom: 6rem;
+  }
+}
 @media screen and (min-width: 1280px) {
   .testimonials {
     display: none;
@@ -1191,6 +1196,7 @@ body {
     padding-top: 6rem;
     height: auto;
     width: 100%;
+    padding-bottom: 0rem;
   }
 }
 .testimonials .owl-dots {
