--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
 
 footer {
     position: absolute;
-    bottom: 2rem;
+    bottom: 3rem;
     width: 100%;
     height: 16rem;
     height: 21rem;
@@ -16,7 +16,7 @@ footer {
     color: $light-grey1;
     padding-top: 1rem;
     @include tablet {
-       bottom: 4.5rem;
+       bottom: 6rem;
     }
     @include laptop {
         position: relative;
